[package]
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
description = "Parsing pattern files for Conway's Game of Life."
edition = "2018"
homepage = "https://github.com/AlephAlpha/ca-formats"
keywords = ["game-of-life", "cellular-automata", "parser"]
license = "MIT"
name = "ca-formats"
readme = "README_en.md"
repository = "https://github.com/AlephAlpha/ca-formats"
version = "0.3.2"

[dependencies]
displaydoc = "0.2.1"
lazy-regex = "2.2.1"
regex = "1.5.4"
thiserror = "1.0.26"

[features]
default = []
unknown = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]
