[package]
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
description = "Parsing pattern files for Conway's Game of Life."
edition = "2021"
homepage = "https://github.com/AlephAlpha/ca-formats"
keywords = ["game-of-life", "cellular-automata", "parser"]
license = "MIT"
name = "ca-formats"
readme = "README_en.md"
repository = "https://github.com/AlephAlpha/ca-formats"
version = "0.3.3"

[dependencies]
displaydoc = "0.2.3"
lazy-regex = "2.3.0"
regex = "1.6.0"
thiserror = "1.0.35"

[features]
default = []
unknown = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]
