[package]
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
description = "Parsing pattern files for Conway's Game of Life."
edition = "2021"
homepage = "https://github.com/AlephAlpha/ca-formats"
keywords = ["game-of-life", "cellular-automata", "parser"]
license = "MIT"
name = "ca-formats"
readme = "README_en.md"
repository = "https://github.com/AlephAlpha/ca-formats"
version = "0.3.5"

[dependencies]
displaydoc = "0.2.3"
lazy-regex = "3.0.0"
regex = "1.7.1"
thiserror = "1.0.40"

[features]
default = []
unknown = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]
